# github-stats-analyser

./: .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  Justfile  README.md  action.yml  lefthook.yml  output.sh  pyproject.toml  run.sh  sonar-project.properties  summary.md
.github/: dependabot.yml
10_downgrade_markdown_link_checker/: action.json  report.json
11_pyproject_checks/: action.json  codelimit.md  report.json
12_upgrade_markdown_link_checker/: action.json  report.json
13_schedule_code_checks/: action.json  report.json
14_refactor_github_actions/: action.json  codelimit.md  report.json
15_clear_caches/: action.json  codelimit.md  report.json
16_codeql_config/: action.json  codelimit.md  report.json
17_dependency_review/: action.json  codelimit.md  report.json
18_daily_updates/: action.json  codelimit.md  report.json
19_superlinter_permissions/: action.json  codelimit.md  report.json
20_markdown_link_checker/: action.json  codelimit.md  report.json
21_update_editorconfig_checker/: action.json  codelimit.md  report.json
22_codeql_cron/: action.json  codelimit.md  report.json
23_dependabot_groups/: action.json  codelimit.md  report.json
24_remove_pinact_config/: action.json  codelimit.md  report.json
25_zizmor_config/: action.json  codelimit.md  report.json
26_zizmor_sarif/: action.json  codelimit.md  report.json
27_dependabot_reusable_workflows/: action.json  codelimit.md  report.json
28_common_sync_labels/: action.json  codelimit.md  report.json
29_common_clear_caches/: action.json  codelimit.md  report.json
30_dependabot_reusable_workflows/: action.json  codelimit.md  report.json
31_migrate_to_reusable_codeql_workflow/: action.json  codelimit.md  report.json
8_code_of_conduct/: action.json  report.json
9_upgrade_licenses/: action.json  report.json
actionlint/: action.json  report.json
add_config_to_summary/: action.json  codelimit.md  report.json
add_example/: action.json  report.json
analyser/: __main__.py  statistics.py  stats.py
bump-git/: action.json  codelimit.md  report.json
bump-superlinter/: action.json  codelimit.md  report.json
bump-versions/: action.json  codelimit.md  report.json
codeql/: action.json  report.json
common-code-checks/: action.json  codelimit.md  report.json
contributing/: action.json  codelimit.md  report.json
dependabot-3/: action.json  codelimit.md  report.json
docs/: PROJECT_TECHNOLOGIES.md
dont_action_summary_when_local/: action.json  report.json
examples/: full_repository_statistics.json
fix-coverage/: action.json  codelimit.md  report.json
fix-ty/: action.json  codelimit.md  report.json
fix-zizmor-warnings/: action.json  codelimit.md  report.json
fix_codelimit/: action.json  report.json
fix_testing_delay/: action.json  report.json
ignore_output/: action.json  codelimit.md  report.json
improve-githooks/: action.json  codelimit.md  report.json
improve_workflows/: action.json  report.json
labels/: action.json  codelimit.md  report.json
lefthook/: action.json  codelimit.md  report.json
line-length/: action.json  codelimit.md  report.json
lockfile/: action.json  codelimit.md  report.json
main/: codelimit.md  report.json
pin-actions/: action.json  codelimit.md  report.json
pin-actions2/: action.json  codelimit.md  report.json
pinacr/: action.json  codelimit.md  report.json
pinact2/: action.json  codelimit.md  report.json
poetry_v2/: action.json  report.json
pull_request_checks/: action.json  codelimit.md  report.json
pytest/: action.json  codelimit.md  report.json
python-security/: action.json  report.json
refactor_actions/: action.json  report.json
refactor_format/: action.json  codelimit.md  report.json
(+327 files in other folders)
