
[project]
name = "github-stats-analyser"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
  "gitpython==3.1.44",
  "pygithub==2.6.0",
  "structlog==24.4.0",
  "pygments==2.19.1",
  "pandas==2.2.3",
  "tabulate==0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "ruff==0.9.7",
  "vulture==2.14",
  "zizmor==1.3.1",
]
test = [
  "check-jsonschema==0.31.0",
  "requests==2.32.3",
  "Markdown==3.7",
  "beautifulsoup4==4.12.3",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["E501"]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "N999",    # Ignore invalid module name
  "SIM112",  # Ignore Lowercase environment variables (used for GitHub actions)
]

fixable = ["ALL"]
unfixable = []

exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D102", "D103", "SLF001", "PT019"]
"python_scripts/*.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["analyser"]

[tool.pytest.ini_options]
norecursedirs = "cloned_repositories"

[tool.vulture]
ignore_names = ["side_effect", "file_paths"]
