
[project]
name = "github-stats-analyser"
dynamic = ["version"]
requires-python = "~=3.13.0"
dependencies = [
  "gitpython==3.1.45",
  "pygithub==2.8.1",
  "structlog==25.5.0",
  "pygments==2.19.2",
  "pandas==2.3.3",
  "tabulate==0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.14.4",
  "vulture==2.14",
  "ty==0.0.1a19",
]
test = [
  "check-jsonschema==0.34.1",
  "requests==2.32.5",
  "Markdown==3.8.2",
  "beautifulsoup4==4.14.2",
]

[tool.uv]
required-version = "~=0.8.0"
package = false
override-dependencies = ["urllib3==2.5.0"]

[tool.setuptools]
py-modules = ["analyser", "tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["E501"]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "N999",    # Ignore invalid module name
  "SIM112",  # Ignore Lowercase environment variables (used for GitHub actions)
]

fixable = ["ALL"]
unfixable = []

exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D102", "D103", "SLF001", "PT019"]
"python_scripts/*.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["analyser"]

[tool.pytest.ini_options]
norecursedirs = "cloned_repositories"

[tool.vulture]
ignore_names = ["side_effect", "file_paths"]
